[Bug 352489] Firefox crashed while browsing the preferences with orca [@ nsXULSelectableAccessible::RefSelection] r=aaronleventhal